kube_cns/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: junho
spec:
  containers:
  - image: [here]
    name: web
    ports:
    - containerPort: 7080
